<resources>
    <string name="app_name">lesson2</string>
    <string name="textview">Я - TextView</string>
    <string name="check_out_awesome_updates_for_android_design_kit_for_figma_now_more_screens_and_more_categories">Check out awesome updates for Android design kit for Figma. Now more screens and more categories.</string>
    <string name="_117_replays">117 REPLAYS</string>
    <string name="roman_kamushken">Roman Kamushken</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="into_component_container_and_with_resizing_constraints_set">“into component container and with resizing constraints set????”</string>
    <string name="Welcome">Hello world!!!!!!!!!!!!!!!!!!!!!1</string>>
</resources>