<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/notifications"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/search" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/message_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/message1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/shape_rectangle"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif"
                        android:src="@drawable/avatar1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/roman_kamushken"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_2_days_ago"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/check_out_awesome_updates_for_android_design_kit_for_figma_now_more_screens_and_more_categories"
                    android:textSize="16sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/replay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/_117_replays"
                        android:textColor="@color/my_blue"
                        android:textSize="12sp"
                        tools:ignore="SmallSp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/thumb_up_outline">

                    </ImageView>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/message2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/shape_rectangle"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif"
                        android:src="@drawable/avatar2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/name2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/roman_kamushken"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/date2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_2_days_ago"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/into_component_container_and_with_resizing_constraints_set"
                    android:textSize="16sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/replay2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/_117_replays"
                        android:textColor="@color/my_blue"
                        android:textSize="12sp"
                        tools:ignore="SmallSp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/thumb_up_outline">

                    </ImageView>>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/message3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/shape_rectangle"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif"
                        android:src="@drawable/avatar3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/name3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/roman_kamushken"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/date3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/_2_days_ago"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/into_component_container_and_with_resizing_constraints_set"
                    android:textSize="16sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/replay3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/_117_replays"
                        android:textColor="@color/my_blue"
                        android:textSize="12sp"
                        tools:ignore="SmallSp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/thumb_up_outline">

                    </ImageView>>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="17dp"
                android:src="@drawable/shopping" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="24dp"
                android:src="@drawable/book_open_variant" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="24dp"
                android:src="@drawable/ic_cart" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="24dp"
                android:src="@drawable/tag_heart" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/heart_filled" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/account"
                    android:textColor="@color/my_blue" />

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

</LinearLayout>